--- a/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme.csproj
+++ b/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme.csproj
@@ -13,12 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.Theming" Version="4.0.2" />
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="4.0.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.Theming" Version="4.1.2" />
+    <PackageReference Include="Volo.Abp.AutoMapper" Version="4.1.2" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="BootstrapBlazor" Version="5.0.8-beta08" />
-    <PackageReference Include="Syncfusion.Blazor" Version="18.3.0.35" />
+    <PackageReference Include="BootstrapBlazor" Version="5.0.11" />
+    <PackageReference Include="Syncfusion.Blazor" Version="18.4.0.35" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Abp.BootstrapTheme.Domain.Shared\Abp.BootstrapTheme.Management.Domain.Shared.csproj" />
