feat： 添加功能开关演示

--- a/host/Abp.BootstrapTheme.Blazor.Host/wwwroot/appsettings.json
+++ b/host/Abp.BootstrapTheme.Blazor.Host/wwwroot/appsettings.json
@@ -7,6 +7,9 @@
   "RemoteServices": {
     "Default": {
       "BaseUrl": "https://localhost:44326"
-    } 
-  } 
+    }
+  },
+  "FeatureManagement": {
+    "EnabledAuthentication": true
+  }
 }
