--- a/host/Abp.BootstrapTheme.Blazor.Host/Abp.BootstrapTheme.Blazor.Host.csproj
+++ b/host/Abp.BootstrapTheme.Blazor.Host/Abp.BootstrapTheme.Blazor.Host.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3-preview2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.2" />
+    <PackageReference Include="Serilog.Sinks.BrowserHttp" Version="1.0.0-dev-00021" />
+    <PackageReference Include="Serilog.Sinks.BrowserConsole" Version="1.0.0-dev-00012" />
+
   </ItemGroup>
 
   <ItemGroup>
