--- a/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme.csproj
+++ b/src/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme.csproj
@@ -13,12 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.Theming" Version="4.1.2" />
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="4.1.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.Theming" Version="4.2.1" />
+    <PackageReference Include="Volo.Abp.AutoMapper" Version="4.2.1" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="BootstrapBlazor" Version="5.0.13-beta05" />
-    <PackageReference Include="Syncfusion.Blazor" Version="18.4.0.35" />
+    <PackageReference Include="BootstrapBlazor" Version="5.0.17" />
+    <PackageReference Include="Syncfusion.Blazor" Version="18.4.0.44" />
     <PackageReference Include="Microsoft.FeatureManagement" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup>
